# sharepointmanager

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yaml
example/: main.py
sharepointer/: sharepoint.py
tests/: README.md  __init__.py  conftest.py  test_authentication_and_init.py  test_dataclasses.py  test_file_operations.py  test_folder_operations.py  test_search_operations.py  test_url_helpers.py
